--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -41,6 +41,13 @@ jobs:
               gradlePluginPortal()
             }
           }
+          dependencyResolutionManagement {
+            repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+            repositories {
+              google()
+              mavenCentral()
+            }
+          }
           rootProject.name = "PixelmonUTM"
           include(":app")
           EOF
@@ -49,11 +56,6 @@ jobs:
           plugins {
             id("com.android.application") version "8.5.2" apply false
             id("org.jetbrains.kotlin.android") version "1.9.24" apply false
-          }
-          @Suppress("UnstableApiUsage")
-          dependencyResolutionManagement {
-            repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-            repositories { google(); mavenCentral() }
           }
           EOF
 
@@ -101,14 +103,17 @@ jobs:
             val composeBom = platform("androidx.compose:compose-bom:2024.09.00")
             implementation(composeBom)
             androidTestImplementation(composeBom)
+
             implementation("androidx.core:core-ktx:1.13.1")
             implementation("androidx.activity:activity-compose:1.9.2")
             implementation("androidx.compose.ui:ui")
             implementation("androidx.compose.ui:ui-tooling-preview")
             implementation("androidx.compose.material3:material3:1.3.0")
             implementation("androidx.navigation:navigation-compose:2.8.0")
+
             debugImplementation("androidx.compose.ui:ui-tooling")
             debugImplementation("androidx.compose.ui:ui-test-manifest")
+
             testImplementation("junit:junit:4.13.2")
             androidTestImplementation("androidx.test.ext:junit:1.2.1")
             androidTestImplementation("androidx.test.espresso:espresso-core:3.6.1")
